--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <nav class="flex items-center text-dark_blue">
         <ul>
           <li class="table-cell"><a href="#" class="mr-9">Pourquoi utiliser WEBIKE</a></li>
-          <li class="table-cell"><a href="#" class="mr-9">Fonctionalités</a></li>
+          <li class="table-cell"><a href="#" class="mr-9">Fonctionnalités</a></li>
         </ul>
         <a href="#" class="inline-block w-fit rounded-md bg-secondary_color py-2 px-4 text-sm font-bold text-dark_blue">Télécharger WEBIKE</a>
       </nav>
@@ -70,6 +70,7 @@
           <p class="flex-[2_2_0] px-8 text-grey_blue">Faire du vélo est une activité physique qui peut vous exercer en douceur. Plus besoin de souscrire à la salle sans jamais y mettre les pieds !</p>
         </div>
       </div>
+
       <div class="z-10 flex flex-wrap">
         <div class="flex flex-1">
           <div class="flex items-center justify-center bg-light_purple rounded-lg p-4 w-32 h-32">
@@ -86,6 +87,73 @@
         </div>
       </div>
     </section>
+
+    <section id="features-webike" class="px-32 py-32">
+
+      <div id="feature-partage" class="flex justify-between mt-14 mb-32">
+        <div class="mr-16">
+          <div class="text-dark_blue px-10 py-5 items-center justify-between min-h-fit rounded-3xl bg-white drop-shadow-md mb-8">
+            <h5 class="uppercase mb-2"><strong>Parce que voyager entre ami•e•s c’est fun !</strong></h5>
+            <p class="text-grey_blue">C’est pourquoi il est désormais possible de prévoir des itinéraires à plusieurs et de réserver plusieurs vélos sur l’application WEBIKE. Plus de problèmes de paiement et une réservation plus rapide, c’est quand même plus convivial !</p>
+          </div>
+          <a href="#" class="inline-block w-fit rounded-md bg-secondary_color py-3 px-4 text-sm font-bold text-dark_blue uppercase">Partagez l’App à vos ami.e.s</a>
+        </div>
+        <img src="/assets/media/features/partage.svg" alt="">
+      </div>
+
+      <div id="feature-itineraire" class="flex justify-between mb-32">
+        <img class="w-1/3" src="assets/media/features/itineraireMockup.svg" alt="">
+        <div class="ml-16 mt-12">
+          <div class="text-dark_blue px-10 py-5 items-center justify-between min-h-fit rounded-3xl bg-white drop-shadow-md mb-12">
+            <h5 class="uppercase mb-2"><strong>Besoin d’un itinéraire pour vous déplacer ?</strong></h5>
+            <p class="text-grey_blue">Planifiez votre parcours grâce à la fonctionnalité itinéraire. Choisissez votre arrivée, votre départ et WEBIKE trouvera pour vous le meilleur chemin, afin de prendre votre vélo et de le déposer à la fin sans vous soucier de l’état des bornes.</p>
+          </div>
+          <div class="flex justify-between">
+            <img src="/assets/media/features/itineraire.svg" alt="">
+            <div class="text-dark_blue px-10 py-5 items-center justify-between min-h-fit rounded-3xl bg-white drop-shadow-md ml-12">
+              <h5 class="uppercase mb-2"><strong>Gardez en mémoire vos adresses favorites</strong></h5>
+              <p class="text-grey_blue">WEBIKE sera votre compagnon vélo au quotidien !</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="feature-signaler" class="flex justify-between mb-32">
+        <div class="w-1/2">
+          <div class="text-dark_blue px-10 py-5 items-center justify-between min-h-fit rounded-3xl bg-white drop-shadow-md mb-12">
+            <h5 class="uppercase mb-2"><strong>Un problème avec un vélo ? dites le nous</strong></h5>
+            <p class="text-grey_blue">WEBIKE vous garanti la qualité de ses services en vous proposant un système de notation sous forme d’étoiles qui vous permettra de choisir vos vélos plus facilement, afin d’éviter les pépins durant le trajet.</p>
+          </div>
+          <div class="text-dark_blue px-10 py-5 items-center justify-between min-h-fit rounded-3xl bg-white drop-shadow-md w-2/3">
+            <h5 class="uppercase mb-2"><strong>Et si ça ne suffit pas</strong></h5>
+            <p class="text-grey_blue">Il vous sera même possible d’identifier les problèmes rencontrés à la fin de votre voyage et notre équipe WEBIKE prendra directement en charge le vélo. </p>
+          </div>
+        </div>
+        <div>
+          <img class="w-2/3" src="/assets/media/features/etoiles.svg" alt="">
+          <img src="/assets/media/features/signaler.svg" alt="">
+        </div>
+      </div>
+
+      <div id="feature-reserver" class="flex justify-between">
+        <img class="w-1/3" src="assets/media/features/reserverMockup.svg" alt="">
+        <div class="ml-16 mt-12">
+          <div class="text-dark_blue px-10 py-5 items-center justify-between min-h-fit rounded-3xl bg-white drop-shadow-md mb-12">
+            <h5 class="uppercase mb-2"><strong>Réservez votre vélo depuis votre téléphone</strong></h5>
+            <p class="text-grey_blue">Dès maintenant, il est possible de planifier vos voyages depuis votre téléphone. Et oui, plus besoin de se rendre à la borne pour débloquer votre vélo !</p>
+          </div>
+          <div class="flex justify-between">
+            <img src="/assets/media/features/reserver.svg" alt="">
+            <div class="text-dark_blue px-10 py-5 items-center justify-between min-h-fit rounded-3xl bg-white drop-shadow-md ml-12">
+              <h5 class="uppercase mb-2"><strong>Tout depuis votre APP</strong></h5>
+              <p class="text-grey_blue">WEBIKE vous propose de visualiser l’état des stations à tout moment et où que soyez. Il ne reste plus qu’à choisir un vélo dans la liste de ceux proposés et le récupérer sous 10 minutes.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
   </main>
   <footer class="relative bg-dark_blue px-32 pt-24 pb-10 rounded-t-3xl mt-64">
     <img src="/assets/media/decors/bikes-station-decor.svg" alt="" class="absolute top-[-15.3rem] right-12">
