--- a/index.html
+++ b/index.html
@@ -92,11 +92,14 @@
 
       <div id="feature-partage" class="flex justify-between mt-14 mb-32">
         <div class="mr-16">
-          <div class="text-dark_blue px-10 py-5 items-center justify-between min-h-fit rounded-3xl bg-white drop-shadow-md mb-8">
+          <div class="text-dark_blue px-10 py-5 items-center justify-between min-h-fit rounded-3xl bg-white drop-shadow-md mb-12">
             <h5 class="uppercase mb-2"><strong>Parce que voyager entre ami•e•s c’est fun !</strong></h5>
             <p class="text-grey_blue">C’est pourquoi il est désormais possible de prévoir des itinéraires à plusieurs et de réserver plusieurs vélos sur l’application WEBIKE. Plus de problèmes de paiement et une réservation plus rapide, c’est quand même plus convivial !</p>
           </div>
-          <a href="#" class="inline-block w-fit rounded-md bg-secondary_color py-3 px-4 text-sm font-bold text-dark_blue uppercase">Partagez l’App à vos ami.e.s</a>
+          <a class="inline-block w-fit rounded-md bg-secondary_color" href="#">
+            <img class="z-15 w-10 z-10 ml-1 -mt-1 absolute" src="/assets/media/icons/share-icon.svg" alt=""> 
+            <p class="z-20 py-4 px-5 text-sm font-bold text-dark_blue uppercase relative">Partagez l’App à vos ami.e.s</p>
+          </a>
         </div>
         <img src="/assets/media/features/partage.svg" alt="">
       </div>
@@ -119,7 +122,7 @@
       </div>
 
       <div id="feature-signaler" class="flex justify-between mb-32">
-        <div class="w-1/2">
+        <div class="w-3/5">
           <div class="text-dark_blue px-10 py-5 items-center justify-between min-h-fit rounded-3xl bg-white drop-shadow-md mb-12">
             <h5 class="uppercase mb-2"><strong>Un problème avec un vélo ? dites le nous</strong></h5>
             <p class="text-grey_blue">WEBIKE vous garanti la qualité de ses services en vous proposant un système de notation sous forme d’étoiles qui vous permettra de choisir vos vélos plus facilement, afin d’éviter les pépins durant le trajet.</p>
@@ -129,9 +132,9 @@
             <p class="text-grey_blue">Il vous sera même possible d’identifier les problèmes rencontrés à la fin de votre voyage et notre équipe WEBIKE prendra directement en charge le vélo. </p>
           </div>
         </div>
-        <div>
-          <img class="w-2/3" src="/assets/media/features/etoiles.svg" alt="">
-          <img src="/assets/media/features/signaler.svg" alt="">
+        <div class="flex flex-col items-end justify-between">
+          <img class="w-3/5" src="/assets/media/features/etoiles.svg" alt="">
+          <img class="w-4/5" src="/assets/media/features/signaler.svg" alt="">
         </div>
       </div>
 
@@ -155,7 +158,7 @@
     </section>
 
   </main>
-  <footer class="relative bg-dark_blue px-32 pt-24 pb-10 rounded-t-3xl mt-64">
+  <footer class="relative bg-dark_blue px-32 pt-24 pb-10 rounded-t-3xl mt-40">
     <img src="/assets/media/decors/bikes-station-decor.svg" alt="" class="absolute top-[-15.3rem] right-12">
     <img src="/assets/media/logos/logo-webike-white.svg" alt="Webike logo white">
     <div>
